syntax = "proto3";
// import "google/protobuf/timestamp.proto";

package grpc.shiro.v1;

service UnifiedUserManagement {
    // Authenticate authenticate the principal in specific domain realm
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
    // AddDomainRealm adds specific realm
    rpc AddDomainRealm(AddDomainRealmRequest) returns (AddDomainRealmResponse) {}
    // GetRolePermissions return role's dynamica route path
    rpc GetRolePermissions(GetRolePermissionsRequest) returns (GetRolePermissionsResponse) {}
}

message AuthenticateRequest{ 
    string Username = 1;
    string Password = 2;
}
message AuthenticateResponse { 
    string Token = 1;
    repeated string Roles  = 2;
}

message AddDomainRealmRequest {}
message AddDomainRealmResponse {}

message GetRolePermissionsRequest {}
message GetRolePermissionsResponse {}

